* GSWeb.framework/GSWApplication+Defaults.m (TAKEVALUEFORKEY):         New macro to use new setValue:forKey: instead of takeValue:forKey:         on Cocoa systems until it is implemented for GNUstep.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20369 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-22  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWApplication+Defaults.m (TAKEVALUEFORKEY):
+	New macro to use new setValue:forKey: instead of takeValue:forKey:
+	on Cocoa systems until it is implemented for GNUstep.
+
 2004-11-12  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
