added some speed enhancements
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20382 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-26  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWDynamicURLString.m
+        added some speed enhancements
+
 2004-11-22  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWApplication+Defaults.m (TAKEVALUEFORKEY):
