2004-11-29  David Wetzel <dave@turbocat.de>         * GSWeb.framework/GSWMessage.h         * GSWeb.framework/GSWMessage.m         uses NSMutableData now. 3.74 % faster than previous version
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20394 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-29  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWMessage.h
+        * GSWeb.framework/GSWMessage.m
+        uses NSMutableData now. 3.74 % faster than previous version
+
 2004-11-26  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWDisplayGroup.m 
