GSWBrowser:replaced +NSNumber numberWithXXX with GSWIntToNSString()
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20405 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-01  David Wetzel <dave@turbocat.de>
+
+        * GSWeb.framework/GSWBrowser.m
+        replaced +NSNumber numberWithXXX with GSWIntToNSString()
+
 2004-11-30  David Wetzel <dave@turbocat.de>
 
         * GSWeb.framework/GSWPopUpButton.m
