--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-01  David Wetzel <dave@turbocat.de>
 
+        * GSWeb.framework/GSWMessage.m
+        More speed for ASCII content
+
+2004-12-01  David Wetzel <dave@turbocat.de>
+
         * GSWeb.framework/GSWBrowser.m
         replaced +NSNumber numberWithXXX with GSWIntToNSString()
         * GSWeb.framework/GSWBundle.m
