--- a/INSTALL
+++ b/INSTALL
@@ -57,6 +57,10 @@ If you do not want the extensions you can compile with
 ADDITIONAL_OBJCFLAGS += -DNOEXTENSIONS
 in config.mak
 
+If you want to use TCSimpleDB you have to add
+ADDITIONAL_OBJCFLAGS += -DTCSDB
+in config.mak
+
 Configurating Apache:
 =====================
 
