* GSWeb.framework/GSWElementID.m   o fixed use of static SEL
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20505 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-31  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWElementID.m
+                o fixed use of static SEL
+
 2004-12-27  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/common/GSWStats[hc]:
 		o added
