* GSWeb.framework/GSWRequest.m  * GSWeb.framework/NSString+HTML.?    o replaced dictionaryQueryString by dictionaryQueryStringWithEncoding:    o replaced decodeURL by decodeURLEncoding:      debugging and coding together with David Ayers
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20890 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-10  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWRequest.m
+        * GSWeb.framework/NSString+HTML.?
+                o replaced dictionaryQueryString by dictionaryQueryStringWithEncoding:
+                o replaced decodeURL by decodeURLEncoding:
+                debugging and coding together with David Ayers
+
 2005-01-19  David Wetzel <dave@turbocat.de>
         * GSWeb.framework/GSWElementID.m:
                 o set static SEL to NULL first
