--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-11  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWRequest.m
+                o changes to support various encodings in GSMime
+
 2005-03-10  David Wetzel <dave@turbocat.de>
         * GSWeb.framework/GSWRequest.m
         * GSWeb.framework/NSString+HTML.?
