--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-18  Manuel Guesdon <mguesdon@orange-concept.com>
+        * GSWeb.framework/NSString+HTML.m
+		o fixes in GSWMemMove and 
+		testStringByConvertingHTML
+
 2005-03-11  David Wetzel <dave@turbocat.de>
         * GSWeb.framework/GSWRequest.m
                 o changes to support various encodings in GSMime
