* GSWeb.framework/GSWBrowser.m o fixed double HTML escaping bug (reported by David Ayers)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20960 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-22  Manuel Guesdon <mguesdon@orange-concept.com>
+        * GSWeb.framework/GSWBrowser.m
+		o fixed double HTML escaping bug (reported by David Ayers)
+
 2005-03-21  Richard Frith-Macdonald <rfm@gnu.org>
         * GSWeb.framework/GSWRequest.m
                 o cleanup GSMime access and avoid unnecessary setting of
