* GSWeb.framework/GSWApplication+Defaults.m (GSWAppClassDummy):         Added method declarations to help various compiler versions         identify the correct signaure to use.         (+[GSWApplication setSessionTimeOutValue:]): Use it.         (+[GSWApplication sessionTimeOutValue]); Ditto.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20969 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-26  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWApplication+Defaults.m (GSWAppClassDummy):
+	Added method declarations to help various compiler versions
+	identify the correct signaure to use.
+	(+[GSWApplication setSessionTimeOutValue:]): Use it.
+	(+[GSWApplication sessionTimeOutValue]); Ditto.
+	
 2005-03-22  Manuel Guesdon <mguesdon@orange-concept.com>
         * GSWeb.framework/GSWBrowser.m
 		o fixed double HTML escaping bug (reported by David Ayers)
