* GSWeb.framework/GSWApplication.m * GSWeb.framework/GSWRequest.m Use cStringLength in place of length
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21045 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-04  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWApplication.m
+        * GSWeb.framework/GSWRequest.m
+        Use cStringLength in place of length
+
 2005-03-22  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/common/GSWUtil.c:
 	o fix in GSWTime_format
