--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-06  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWDynamicURLString.m
+                o avoid message call if not needed.
+        * GSWeb.framework/GSWHyperlink.m
+                o utf-8 bug workaround in GSWDynamicURLString
+
 2005-04-05  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWActiveImage.m:
 		o avoid string formatting
