removed some logs in GSWApplication.m GSWDefaultAdaptor.m GSWDefaultAdaptorThread.m GSWElementID.m GSWMessage.m GSWSessionTimeOutManager.m
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21138 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-21  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework:
+          GSWApplication.m GSWDefaultAdaptor.m GSWDefaultAdaptorThread.m 
+          GSWElementID.m GSWMessage.m GSWSessionTimeOutManager.m
+                o removed some logs
+
 2005-04-06  David Wetzel <dave@turbocat.de>
         * GSWeb.framework/GSWDynamicURLString.m
                 o avoid message call if not needed.
