Removed GSWHyperlink hrefInContext: and fixed enabled binding
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21154 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-04-24  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWHyperlink.m:
+		o removed -hrefInContext:
+		o fix for enabled binding
+	* GSWeb.framework/GSWHyperlink.h:
+		o removed -hrefInContext:
+
 2005-04-21  David Wetzel <dave@turbocat.de>
         * GSWeb.framework:
           GSWApplication.m GSWDefaultAdaptor.m GSWDefaultAdaptorThread.m 
