* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats):         Use standard strtod instead of the GNU extension strtof         which is stored in a double anyway.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21184 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-03  David Ayers <d.ayers@inode.at>
+
+	* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats):
+	Use standard strtod instead of the GNU extension strtof
+	which is stored in a double anyway.
+	
 2005-05-02  David Ayers <d.ayers@inode.at>
 
 	* GNUmakefile, Examples/hello/GNUmakefile, 
