* GSWeb.framework/GSWUtils.h/m (GetTmpName): Remove unused         function which generates warnings about tempnam usage.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21187 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-04  David Ayers <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWUtils.h/m (GetTmpName): Remove unused
+	function which generates warnings about tempnam usage.
+	
 2005-05-03  David Ayers <d.ayers@inode.at>
 
 	* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats):
